# booster_robotics_sdk

./: CMakeLists.txt  LICENSE  README.md  install.sh  pyproject.toml
example/high_level/: b1_loco_example_client.cpp  b1_loco_example_client.py  visual_kick_ball_detect_dds_camera.cpp  visual_kick_ball_detect_no_ros.cpp  visual_kick_no_ros.cpp  visual_pass_ball_to_person.cpp
example/low_level/: b1_low_sdk_example.cpp  odometer_example.cpp
examples/: visual_kick_no_ros.cpp
include/booster/common/dds/: dds_callback.hpp  dds_entity.hpp  dds_factory_model.hpp  dds_topic_channel.hpp
include/booster/idl/ai/: AsrChunk.h  Subtitle.h
include/booster/idl/audio/: AudioCaptureFrameTopic.h  AudioCommon.h  AudioErrorTopic.h  AudioEventTopic.h  AudioProgressTopic.h  AudioTopic.h  BluetoothEventTopic.h  GetDoaAngleRequest.h  GetDoaAngleResponse.h  GetSystemMuteRequest.h  GetSystemMuteResponse.h  GetSystemVolumeRequest.h  GetSystemVolumeResponse.h  InitPlayerRequest.h  InitPlayerResponse.h  InitRecorderRequest.h  InitRecorderResponse.h  PlayerInfoResponse.h  RecorderInfoResponse.h  RegisterClientRequest.h  RegisterClientResponse.h  SendPcmData.h  ServiceResult.h  SessionMeta.h  SessionRequest.h  SetPlayerVolume.h  SetSystemMute.h  SetSystemVolume.h
include/booster/idl/b1/: BatteryState.h  ButtonEvent.h  FallDownState.h  Hand.h  HandReplyData.h  HandReplyParam.h  HandTouchData.h  HandTouchParam.h  ImuInfo.h  ImuState.h  Kick.h  LightControlMsg.h  LightPixel.h  LowCmd.h  LowState.h  MotorCmd.h  MotorState.h  Odometer.h  ProneBodyControlStatus.h  RemoteControllerState.h  RobocupBehaviorStatus.h  RobotDdsBatteryStatus.h  RobotDdsImuStatus.h  RobotDdsJointStatus.h  RobotModel.h  RobotProcessState.h  RobotProcessStateMsg.h  RobotReplayTrajID.h  RobotStates.h  RobotStatusDdsMsg.h
include/booster/idl/builtin_interfaces/: Time.h
include/booster/idl/camera/: Camera.h
include/booster/idl/geometry_msgs/: Point.h  Pose.h  PoseStamped.h  PoseWithCovariance.h  Quaternion.h  Transform.h  TransformStamped.h  Twist.h  TwistWithCovariance.h  Vector3.h
include/booster/idl/nav_msgs/: Odometry.h
include/booster/idl/rpc/: RpcReqMsg.h  RpcRespMsg.h
include/booster/idl/sensor_msgs/: CameraInfo.h  CompressedImage.h  Image.h  Imu.h  JointState.h  RegionOfInterest.h
include/booster/idl/std_msgs/: Header.h
include/booster/robot/ai/: api.hpp  client.hpp
include/booster/robot/audio/: audio_capture_stream.h  audio_manager.h  audio_player.h  audio_recorder.h  audio_types.h
include/booster/robot/b1/: b1_api_const.hpp  b1_loco_api.hpp  b1_loco_client.hpp
include/booster/robot/camera/: camera_api.hpp  camera_client.hpp
include/booster/robot/channel/: channel_subscriber.hpp
include/booster/robot/common/: camera_info_parser.hpp  device_info.hpp  device_info_parser.hpp  entities.hpp  robot_shared.hpp
include/booster/robot/rpc/: rpc_client.hpp
include/booster/robot/vision/: handeye_calib_api.hpp  handeye_calib_client.hpp  vision_client.hpp
include/booster/robot/x5_camera/: x5_camera_api_const.hpp  x5_camera_client.hpp
include/booster_fastdds/: tinyxml2.h
include/booster_fastdds/fastcdr/: Cdr.h  CdrEncoding.hpp  CdrSizeCalculator.hpp  FastBuffer.h  FastCdr.h  config.h  eProsima_auto_link.h  fastcdr_dll.h
include/booster_fastdds/fastcdr/cdr/: fixed_size_string.hpp
include/booster_fastdds/fastcdr/detail/: container_recursive_inspector.hpp
include/booster_fastdds/fastcdr/exceptions/: BadOptionalAccessException.hpp  BadParamException.h  Exception.h  LockedExternalAccessException.hpp  NotEnoughMemoryException.h
include/booster_fastdds/fastcdr/xcdr/: MemberId.hpp  external.hpp  optional.hpp
include/booster_fastdds/fastdds/domain/: DomainParticipantImpl.hpp
include/booster_fastdds/fastdds/log/: LogResources.hpp
include/booster_fastdds/fastdds/publisher/: DataWriterHistory.hpp  DataWriterImpl.hpp  PublisherImpl.hpp
include/booster_fastdds/fastdds/rtps/: Endpoint.h  RTPSDomain.h  rtps_all.h  rtps_fwd.h
include/booster_fastdds/fastdds/statistics/: IListeners.hpp  topic_names.hpp
include/booster_fastdds/fastdds/subscriber/: DataReaderImpl.hpp  ReadConditionImpl.hpp  SubscriberImpl.hpp
include/booster_fastdds/fastdds/topic/: ContentFilterInfo.hpp  ContentFilterUtils.hpp  ContentFilteredTopicImpl.hpp  TopicDescriptionImpl.hpp  TopicImpl.hpp  TopicProxy.hpp  TopicProxyFactory.hpp
include/booster_fastdds/fastdds/utils/: QosConverters.hpp
include/booster_fastdds/fastrtps/: Domain.h  TopicDataType.h  config.h  eProsima_auto_link.h  fastrtps_all.h  fastrtps_dll.h  fastrtps_fwd.h
include/booster_fastdds/fastrtps/attributes/: LibrarySettingsAttributes.h  ParticipantAttributes.h  PublisherAttributes.h  ReplierAttributes.hpp  RequesterAttributes.hpp  SubscriberAttributes.h  TopicAttributes.h  all_attributes.h
include/booster_fastdds/fastrtps/common/: KeyedChanges.h
include/booster_fastdds/fastrtps/config/: doxygen_modules.h
include/booster_fastdds/fastrtps/log/: Colors.h  FileConsumer.h  Log.h  StdoutConsumer.h
include/booster_fastdds/fastrtps/participant/: Participant.h  ParticipantListener.h
include/booster_fastdds/fastrtps/publisher/: Publisher.h  PublisherHistory.h  PublisherListener.h
include/booster_fastdds/fastrtps/qos/: DeadlineMissedStatus.h  IncompatibleQosStatus.hpp  LivelinessChangedStatus.h  LivelinessLostStatus.h  ParameterTypes.h  QosPolicies.h  ReaderQos.h  SampleRejectedStatus.hpp  WriterQos.h
include/booster_fastdds/fastrtps/rtps/: Endpoint.h  RTPSDomain.h  rtps_all.h  rtps_fwd.h
include/booster_fastdds/fastrtps/subscriber/: SampleInfo.h  Subscriber.h  SubscriberHistory.h  SubscriberListener.h
include/booster_fastdds/fastrtps/transport/: SocketTransportDescriptor.h  TCPTransportDescriptor.h  TCPv4TransportDescriptor.h  TCPv6TransportDescriptor.h  TransportDescriptorInterface.h  TransportInterface.h  TransportReceiverInterface.h  UDPTransportDescriptor.h  UDPv4TransportDescriptor.h  (+2 more)
include/booster_fastdds/foonathan/: list_node_size_impl.hpp  map_node_size_impl.hpp  set_node_size_impl.hpp  unordered_map_node_size_impl.hpp
python/: binding.cpp
(+449 files in other folders)
